changed api key

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-ANTHROPIC_API_KEY=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
+ANTHROPIC_API_KEY=
