--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "pdfjs-dist": "^4.7.76",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.13.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
